various configuration changes

--- a/.github/workflows/tofu.yml
+++ b/.github/workflows/tofu.yml
@@ -54,7 +54,7 @@ jobs:
           { PLAN=$(tofu plan -var-file="env-staging.tfvars" -no-color | tee /dev/fd/5 || true); } 5>&1
           echo "<details><summary>OpenTofu Plan (Staging)</summary><code>$PLAN</code></details>" >> $GITHUB_STEP_SUMMARY
       - name: Tofu Init (Prod)
-        run: tofu init -var-file="env-prod.tfvars" -input=false
+        run: tofu init -var-file="env-prod.tfvars" -input=false -reconfigure
       - name: Tofu Plan (Prod)
         run: |
           { PLAN=$(tofu plan -var-file="env-prod.tfvars" -no-color | tee /dev/fd/5 || true); } 5>&1
